# tradePlatform

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tests/: conftest.py  test_main.py
